# saba-tuvia-archive

./: .gitignore  Cargo.toml  README.md  consolidated_output.csv  create_csv.py  cropper.py  main.py  processed_files.txt  recreate.py  recreated_tracker.txt  requirements.txt  script.py  transcribe_and_translate.py  utils.py
.github/workflows/: daily.yml  daily_transcription.yml  recreate.yml
outputs/: batch_00007.txt  batch_00015.txt  batch_00023.txt  batch_00047.txt  batch_00137.txt  batch_00177.txt  batch_00197.txt  batch_00253.txt  batch_00293.txt  batch_00313.txt  batch_00333.txt  batch_00353.txt  batch_00373.txt  batch_00473.txt  batch_00493.txt  batch_00553.txt  batch_00593.txt  batch_00613.txt  batch_00633.txt  result_00001.txt
outputs/recreated/: batch_00007.txt
src/: cropper.rs  g_api.rs  main.rs
