[package]
name = "image_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
opencv = "0.84"
base64 = "0.13"
